idf_component_register(SRCS "tls_ca_bundle.c" "tls_global_ca.c" "tls_client.c" "transport.c" "string_utils.c" "http_status_codes.c" "linked_list.c" "tcp_client.c" "http_parser.c" "http_client.c" "esp_maestro.cpp" "fonts/notosans_14p.c" "display_handler.c" "wifi_handler.c" "ui.c" "time_utils.c" "scheduler.c" "ui_status.cpp"
                    INCLUDE_DIRS ".")
